--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: haixun@gmail.com
 description:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: haixun
+github_username:  haixun
 
 # Build settings
 theme: minima
